[package]
name = "sosistab"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol="0.3"
ed25519-dalek={version="1.0.0-pre.4", features=["serde"]}
x25519-dalek={version="0.6", features=["serde"]}
serde={version="1", features=["derive"]}
bytes={version="0.5", features=["serde"]}
blake3="0.3"
c2-chacha="0.2"
rand="0.7"
constant_time_eq="0.1"
bincode="1.3"
enum_variant_type="0.2"
async-channel="1.2"
raptorq="1.4.2"
probability="0.17"
log="0.4"
async-mutex="1.1"
snap="1"

[dev-dependencies]
chacha20poly1305={version="0.5", features=["reduced-round"]}
aes-gcm="0.6"
env_logger="0.7"